# taosws-rs

taos-ws-py/: Cargo.toml
taos-ws-py/examples/: pandas-read-sql.py  pep-249.py
taos-ws-py/src/: lib.rs
