[package]
name = "taos-ws-py"
version = "0.1.1"
edition = "2021"
private = true
authors = ["Taosdata Inc."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "taosws"
crate-type = ["cdylib"]

[dependencies]
taos-query = { path = "../taos-query" }
taos-ws = { path = "../taos-ws", features = ["native-tls-vendored"] }

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]
